feat(15-02): create five-job serial CI pipeline workflow
- Add .github/workflows/ci.yml with build → unit-test → integration-test → e2e → docker chain
- Cache Maven dependencies keyed on pom.xml hash (actions/cache@v4) in all Maven jobs
- Run mvn test with JaCoCo report; post coverage comment via madraphos/jacoco-report@v1.7.2 on PRs
- Run mvn verify -DskipTests in integration-test job (Failsafe only, skip redundant Surefire)
- E2E smoke test: docker compose up with SPRING_DATASOURCE_PASSWORD + POSTGRES_PASSWORD both set
- Cap NYC sync to 200 records to prevent runner timeout (NYC_API_MAX_RECORDS=200)
- Push Docker image to GHCR only on main branch (ghcr.io/st4r4x/restaurant-analytics)
- Tear down docker compose stack with if: always() to prevent orphaned containers